--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>Lapio website</title>
-  <style>
-    p {background-color: red;}
-  </style>
-  <link rel="stylesheet" href="style.css">
+
+  <title>Github page testi</title>
+
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
-  <!--Tee tehtävät tänne-->
+  <h1>Github pages testi</h1>
 </body>
 
 </html>
